SERVER-78865: Regex $options should not serialize with "?"