jstests/core/index/fts/fts_mix.js
@@ -1,8 +1,3 @@
-// @tags: [ skip_for_query_stats ]
-// Note: Separate line for each TODO to ensure the linter checks for each ticket in the queue, but
-// the test shouldn't be formally re-enabled until all TODOs are removed.
-// TODO SERVER-78865 reenable test in query_stats_passthrough
-
 (function() {
 load("jstests/libs/fts.js");
 load("jstests/aggregation/extras/utils.js");  // For resultsEq.
