jstests/core/query/dbref/dbref3.js
@@ -2,9 +2,7 @@
 // and the second field is $id with any type. Only the first two fields matter for deciding if it
 // is a DBRef. See http://docs.mongodb.org/manual/reference/database-references/#dbrefs.
 // @tags: [ skip_for_query_stats ]
-// Note: Separate line for each TODO to ensure the linter checks for each ticket in the queue, but
-// the test shouldn't be formally re-enabled until all TODOs are removed.
-// TODO SERVER-78865 reenable test in query_stats_passthrough
+// TODO SERVER-78945 reenable test in query_stats_passthrough
 var t = db.dbref3;
 
 t.drop();
